--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 Gnuk - An Implementation of USB Cryptographic Token for GnuPG
 
-							  Version 1.2.9
-							     2018-04-05
+							 Version 1.2.10
+							     2018-05-10
 							   Niibe Yutaka
 				      Free Software Initiative of Japan
 
 Release Notes
 =============
 
-This is the release of Gnuk, version 1.2.9, which has major
+This is the release of Gnuk, version 1.2.10, which has major
 incompatible changes to Gnuk 1.0.x.  Specifically, it now supports
 overriding key import, but importing keys (or generating keys) results
 password reset.  Also, you need to import private keys before changing
@@ -25,9 +25,9 @@ than 8 seconds to sign/decrypt.  Key generation of RSA-4096 just fails,
 because the device doesn't have enough memory.
 
 It supports new KDF-DO feature.  Please note that this is
-experimental.  To use the feature, you need to use newer GnuPG
-(forthcoming 2.2.6 or later).  You need to prepare the KDF-DO on your
-token by the card-edit/kdf-setup command.
+experimental.  To use the feature, you need to use newer GnuPG (2.2.6
+or later).  You need to prepare the KDF-DO on your token by the
+card-edit/kdf-setup command.
 
 
 What's Gnuk?
@@ -35,7 +35,7 @@ What's Gnuk?
 
 Gnuk is an implementation of USB cryptographic token for GNU Privacy
 Guard.  Gnuk supports OpenPGP card protocol version 3, and it runs on
-STM32F103 processor.
+STM32F103 processor (and its compatible).
 
 I wish that Gnuk will be a developer's soother who uses GnuPG.  I have
 been nervous of storing secret key(s) on usual secondary storage.
@@ -405,9 +405,11 @@ Then, type:
 
 Then, we will have "gnuk.elf" under src/build directory.
 
-Next, we can get the final image by running following command.
-
-  $ make build/gnuk-vidpid.elf
+If you are not the authorized vendor, please never distribute this
+file of "gnuk.elf", which includes VID:PID in the image.  If you would
+like to distribute the image (for example, to check if it's
+reproducible or not), the file "gnuk-no-vidpid.elf" is the one with no
+VID:PID.
 
 
 How to install
