--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-10-02  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* chopstx: Update to 1.11.
+
 2018-10-01  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/gnuk.h (EV_EXEC_ACK_REQUIRED): New.
