--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2018-10-02  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* src/stack-def.h (SIZE_0): Increase.
+
 	* chopstx: Update to 1.11.
 
 2018-10-01  NIIBE Yutaka  <gniibe@fsij.org>
