--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-10-12  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/usb-ccid.c (ccid_thread): Notify host about ack button.
+
 2018-10-02  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/stack-def.h (SIZE_0): Increase.
