--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2018-11-09  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* tool/kdf_calc.py (kdf_calc): Use libgcrypt.so.20.
+
+2018-11-09  NIIBE Yutaka  <gniibe@fsij.org>
+
 	* src/openpgp.c (cmd_pso, cmd_internal_authenticate): Use
 	ccid_comm.
 
