--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 Gnuk - An Implementation of USB Cryptographic Token for GnuPG
 
-							 Version 1.2.10
-							     2018-05-10
+							 Version 1.2.11
+							     2018-11-12
 							   Niibe Yutaka
 				      Free Software Initiative of Japan
 
 Release Notes
 =============
 
-This is the release of Gnuk, version 1.2.10, which has major
+This is the release of Gnuk, version 1.2.11, which has major
 incompatible changes to Gnuk 1.0.x.  Specifically, it now supports
 overriding key import, but importing keys (or generating keys) results
 password reset.  Also, you need to import private keys before changing
@@ -28,6 +28,8 @@ It supports new KDF-DO feature.  Please note that this is
 experimental.  To use the feature, you need to use newer GnuPG (2.2.6
 or later).  You need to prepare the KDF-DO on your token by the
 card-edit/kdf-setup command.
+
+With FST-01SZ, experimental ack button support is available for test.
 
 
 What's Gnuk?
@@ -83,8 +85,7 @@ A3: Orthodox choice is Olimex STM32-H103.
     choice for experiment.
 
 Q4: What's version of GnuPG are you using?
-A4: In Debian GNU/Linux system, I use GnuPG modern 2.1.18 in
-    unstable.
+A4: In Debian GNU/Linux system, I use GnuPG modern 2.1.18.
 
 Q5: What's version of pcscd and libccid are you using?
 A5: I don't use them, pcscd and libccid are optional, you can use Gnuk
@@ -178,15 +179,6 @@ Original features of Gnuk, tested manually lightly:
 	* Card holder certificate (write by UPDATE BINARY)
 	* Upgrading with "EXTERNAL AUTHENTICATE" by reGNUal
 
-It is known not-working well:
-
-        * It is known that the specific combination of libccid 1.4.1
-	  (or newer) with libusb 1.0.8 (or older) had a minor problem.
-	  It is rare but it is possible for USB communication to be
-	  failed, because of a bug in libusb implementation.  Use
-	  libusbx 1.0.9 or newer, or don't use PC/SC, but use internal
-	  CCID driver of GnuPG.
-
 
 Targets
 =======
@@ -219,6 +211,8 @@ script prepending 'bash' before './configure'.
 
 Some tools are written in Python.  If your Python is not installed as
 /usr/bin/python, please prepend 'python' for your command invocation.
+Python 2.7 and PyUSB 0.4.3 is assumed.  I also use Python 3.5 and
+PyUSB 1.0.0.
 
 
 Source code
@@ -255,7 +249,7 @@ External source code
 
 Gnuk is distributed with external source code.
 
-* chopstx/  -- Chopstx 1.8
+* chopstx/  -- Chopstx 1.11
 
   We use Chopstx as the kernel for Gnuk.
 
@@ -377,10 +371,10 @@ You need GNU toolchain and newlib for 'arm-none-eabi' target.
 On Debian we can install the packages of gcc-arm-none-eabi,
 gdb-arm-none-eabi and its friends.  I'm using:
 
-	binutils-arm-none-eabi	2.28-4+9+b3
-	gcc-arm-none-eabi 	15:6.3.1+svn253039-1
+	binutils-arm-none-eabi	2.31.1-2+10
+	gcc-arm-none-eabi 	15:7-2018-q2-4
 	gdb-arm-none-eabi 	7.12-6+9+b2
-	libnewlib-arm-none-eabi	2.4.0.20160527-3
+	libnewlib-arm-none-eabi	3.0.0.20180802-2
 
 Or else, see https://launchpad.net/gcc-arm-embedded for preparation of
 GNU Toolchain for 'arm-none-eabi' target.
@@ -536,8 +530,8 @@ Type following command to see Gnuk runs:
   $ gpg --card-status
 
 
-Besides, there is a functionality test under test/ directory.  See
-test/README.
+Besides, there is a functionality test under tests/ directory.  See
+tests/README.
 
 
 Personalize the Token, import keys, and change the password
