--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-11-30  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/usb-ccid.c (ccid_thread): Fix another race condition.
+
 2018-11-25  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.2.12.
