--- a/test/README
+++ b/test/README
@@ -18,3 +18,10 @@ to run the test suite.
 
 To skip tests for key generation, add an option "--tag ~keygen".  To
 stop running tests after the first error or failure, add "--stop" option.
+
+To run in a separate environment with pipenv:
+$ pipenv --python 2 
+$ pipenv shell
+$ pip install -r requirements.txt
+and run:
+$ nosetests --with-freshen -v
