--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 Gnuk - An Implementation of USB Cryptographic Token for GnuPG
 
-							 Version 1.2.14
-							     2019-03-05
+							 Version 1.2.15
+							     2020-01-24
 							   Niibe Yutaka
 				      Free Software Initiative of Japan
 
 Release Notes
 =============
 
-This is the release of Gnuk, version 1.2.14, which has major
+This is the release of Gnuk, version 1.2.15, which has major
 incompatible changes to Gnuk 1.0.x.  Specifically, it now supports
 overriding key import, but importing keys (or generating keys) results
 password reset.  Also, you need to import private keys before changing
@@ -75,7 +75,7 @@ A1: Gnuk version 1.0 only supports RSA-2048.
 
 Q2: How long does it take for digital signing?
 A2: It takes a second and a half or so for RSA-2048. 
-    It takes more than 8 secondd for RSA-4096.
+    It takes more than 8 seconds for RSA-4096.
 
 Q3: What's your recommendation for target board?
 A3: Orthodox choice is Olimex STM32-H103.
@@ -85,7 +85,7 @@ A3: Orthodox choice is Olimex STM32-H103.
     choice for experiment.
 
 Q4: What's version of GnuPG are you using?
-A4: In Debian GNU/Linux system, I use GnuPG modern 2.1.18.
+A4: In Debian GNU/Linux system, I use GnuPG modern 2.2.12.
 
 Q5: What's version of pcscd and libccid are you using?
 A5: I don't use them, pcscd and libccid are optional, you can use Gnuk
@@ -211,8 +211,7 @@ script prepending 'bash' before './configure'.
 
 Some tools are written in Python.  If your Python is not installed as
 /usr/bin/python, please prepend 'python' for your command invocation.
-Python 2.7 and PyUSB 0.4.3 is assumed.  I also use Python 3.5 and
-PyUSB 1.0.0.
+I use Python 3.7 and PyUSB 1.0.0.
 
 
 Source code
@@ -249,7 +248,7 @@ External source code
 
 Gnuk is distributed with external source code.
 
-* chopstx/  -- Chopstx 1.14
+* chopstx/  -- Chopstx 1.18
 
   We use Chopstx as the kernel for Gnuk.
 
@@ -371,7 +370,7 @@ You need GNU toolchain and newlib for 'arm-none-eabi' target.
 On Debian we can install the packages of gcc-arm-none-eabi,
 gdb-arm-none-eabi and its friends.  I'm using:
 
-	binutils-arm-none-eabi	2.31.1-2+10
+	binutils-arm-none-eabi	2.31.1-12+11
 	gcc-arm-none-eabi 	15:7-2018-q2-6
 	gdb-multiarch 		8.2.1-1
 	libnewlib-arm-none-eabi	3.1.0.20181231-1
@@ -432,9 +431,11 @@ OpenOCD 0.9.0 now supports ST-Link/V2.  We can use it like:
             -c "program build/gnuk.elf verify reset exit"
 
 
-
 STBee
 -----
+
+Note that this is only for your experiment; Your private key materials
+on the board can be accessed by DfuSe.
 
 Reset the board with "USER" switch pushed.  Type following to write
 to flash:
@@ -474,7 +475,7 @@ protect, killing DfuSe and accessing by JTAG debugger is recommended.
 This is completely optional.
 
 For this procedure, you need python and pyscard (python-pyscard
-package in Debian) or PyUSB 0.4.3 (python-usb package in Debian).
+package in Debian) or PyUSB (python-usb package in Debian).
 
 (1) [pyscard] Stop scdaemon
     [PyUSB] Stop the pcsc daemon.
@@ -486,7 +487,7 @@ Exception" by "Sharing violation".
 
 In case of PyUSB tool, you need to stop pcscd.
 
-  # /etc/init.d/pcscd stop
+  # systemctl stop pcscd
 
 
 (2) [Optional] Write fixed serial number
@@ -599,7 +600,7 @@ You can get it by:
     $ git clone https://salsa.debian.org/gnuk-team/gnuk/gnuk.git
 
 It's also available at: www.gniibe.org
-You can browse at: https://git.gniibe.org/gitweb?p=gnuk/gnuk.git;a=summary
+You can browse at: https://git.gniibe.org/cgit/gnuk/gnuk.git/
 
 I put Chopstx as a submodule of Git.  Please do this:
 
