--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-08-26  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* tests/test_000_empty_card.py (test_name_lang_sex): Support
+	OpenPGP card version 3.3.
+
 2020-01-24  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.2.15.
