--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-02-25  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* VERSION: 1.2.17.
+
 2021-02-22  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/config.h.in (@KDF_DO_REQUIRED_DEFINE@): New.
