--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-04-02  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* VERSION: 1.2.18.
+
 2021-04-01  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* tool/upgrade_by_passwd.py: Check configure target and
