configure: Allow override of kdf_do variable.
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,34 @@
 Gnuk NEWS - User visible changes
 
 
+* Major changes in Gnuk 1.2.19
+
+  Released 2021-10-1x, by NIIBE Yutaka
+
+** KDF Data Object configuration
+KDF Data Object should be highly recommended for all configurations.
+Nevertheless, for backward compatibillity, in Gnuk 1.2, it is optional
+by default; It is up to user to configure KDF Data Object before
+importing private keys.  In this situatoin, it is not good to
+introduce new option like --enable-always-require-kdf-do, because it
+might wrongly encourage use of Gnuk with no KDF Data Object setting,
+by confusion.  If needed, please run configure:
+
+  kdf_do=required ./configure --enable-factory-reset --target...
+
+or
+
+  kdf_do=optional ./configure --enable-factory-reset --target...
+
+Please note that such a use of variable by shell command line is not
+well supported by the configure script (for other variables), but
+override of kdf_do is needed in some situations.
+
+** Upgrade of Chopstx
+We use Chopstx 1.20.  This enables use with PC/SC for GNU/Linux
+emulation.
+
+
 * Major changes in Gnuk 1.2.18
 
   Released 2021-04-02, by NIIBE Yutaka
